# comprocaml

./: .gitignore  LICENSE  README.md  comprocaml.opam  dune-project
.github/workflows/: test.yaml
lib/: arrayExt.ml  arrayExt.mli  binarySearch.ml  binarySearch.mli  bit.ml  bit.mli  bitSet.ml  bitSet.mli  centroidDecomposition.ml  centroidDecomposition.mli  combinatorics.ml  combinatorics.mli  disjointRangeSet.ml  disjointRangeSet.mli  dune  fps.ml  graph.ml  graph.mli  intervalHeap.ml  intervalHeap.mli  iterExt.ml  iterExt.mli  lazySegmentTree.ml  lazySegmentTree.mli  listExt.ml  listExt.mli  math.ml  math.mli  matrix.ml  matrix.mli  modInt.ml  modInt.mli  modInt998244353.ml  modInt998244353.mli  modint.ml  monoid.ml  monoid.mli  numberTheory.ml  numberTheory.mli  print.ml  (+8 more)
test/: arrayExt.ml  bitSet.ml  combinatorics.ml  disjointRangeSet.ml  dune  graph.ml  intervalHeap.ml  lazySegmentTree.ml  print.ml  quadHeap.ml
